crates/oxc_linter/src/snapshots/jest_prefer_strict_equal.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jest(prefer-strict-equal): Suggest using `toStrictEqual()`.
   ╭─[prefer_strict_equal.tsx:1:19]
 1 │ expect(something).toEqual(somethingElse);
   ·                   ───────
   ╰────
  help: Use `toStrictEqual()` instead

  ⚠ jest(prefer-strict-equal): Suggest using `toStrictEqual()`.
   ╭─[prefer_strict_equal.tsx:1:19]
 1 │ expect(something).toEqual(somethingElse,);
   ·                   ───────
   ╰────
  help: Use `toStrictEqual()` instead

  ⚠ jest(prefer-strict-equal): Suggest using `toStrictEqual()`.
   ╭─[prefer_strict_equal.tsx:1:19]
 1 │ expect(something)["toEqual"](somethingElse);
   ·                   ─────────
   ╰────
  help: Use `toStrictEqual()` instead
